MA742BЮ: implemented TeamGenerator logic.